# simstackserver

./: .conda-ignore  .cruft.json  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  KillSimStackServer.sh  LICENSE  README.md  SimStackServer.py  Todo.txt  pyproject.toml  pyproject.toml.rej  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: ci.yml  conda_build.yml  pypi_build.yml
SimStackServer/: BaseClusterManager.py  ClusterManager.py  Config.py  EvalHandler.py  FastAPIServer.py  FilegeneratorClusterManager.py  LocalClusterManager.py  MessageTypes.py  RemoteServerManager.py  SecureWaNos.py  SimStackServer.py  SimStackServerEntryPoint.py  SimStackServerMain.py  WaNoCalcJob.py  WorkflowModel.py  __init__.py
SimStackServer/HTTPServer/: HTTPServer.py
SimStackServer/REST/: files_api.py
SimStackServer/Reporting/: ReportRenderer.py
SimStackServer/Reporting/Templates/: head.html  style_explanation.txt
SimStackServer/Settings/: ClusterSettingsProvider.py
SimStackServer/SimAiiDA/: AiiDAJob.py
SimStackServer/Tools/: GenJsonEntrypoint.py  KillSimStackServer.py
SimStackServer/Util/: ClientResourceModelToServerResourceModel.py  ClusterSettings.py  Exceptions.py  FileUtilities.py  InternalBatchSystem.py  NoEnterPIDLockFile.py  ResultRepo.py  SocketUtils.py  XMLUtils.py  localhost_checker.py
SimStackServer/WaNo/: AbstractWaNoModel.py  MiscWaNoTypes.py  WaNoDelta.py  WaNoExceptions.py  WaNoFactory.py  WaNoModels.py  WaNoTreeWalker.py  read_wano_delta.py
SimStackServer/wano_calcjob/: .coveragerc  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  conftest.py  register_calcjobs.sh  setup.json  setup.py
SimStackServer/wano_calcjob/.github/: check_version.py
SimStackServer/wano_calcjob/.github/workflows/: ci.yml  publish-on-pypi.yml
SimStackServer/wano_calcjob/docs/source/: conf.py  index.rst
SimStackServer/wano_calcjob/docs/source/developer_guide/: index.rst
SimStackServer/wano_calcjob/docs/source/user_guide/: get_started.rst
SimStackServer/wano_calcjob/examples/: example_01.py
SimStackServer/wano_calcjob/integration_test/: test_calculations.py
SimStackServer/wano_calcjob/tests/: test_calculations.py  test_cli.py
SimStackServer/wano_calcjob/tests/input_files/: molecule_0.spf
SimStackServer/wano_calcjob/tests/inputs/wanos/Deposit/: Deposit3.xml  deposit_init.sh
SimStackServer/wano_calcjob/tests/inputs/wanos/lightforge2/: lightforge2.xml  merge_settings.py  reformat_settings.py  start_LF.sh
SimStackServer/wano_calcjob/tools/: aiida_command_as_user.sh  autogen_setup.py  delete_aiida_account.sh  setup_aiida_account.sh  sss_activate.sh  wano-aiida-exec
SimStackServer/wano_calcjob/wano_calcjob/: WaNoCalcJobBase.py  WaNoCalcJobParserBase.py  __init__.py  calculations.py  calculations.py.template  cli.py  helpers.py  parsers.py
SimStackServer/wano_calcjob/wano_calcjob/data/: __init__.py
conda-recipe/: meta.yaml  recipe.yaml
tests/: conftest.py  outpath  testClusterManager.py  testConfig.py  testEvalHandler.py  testRemoteServerManager.py  testWaNoCalcJob.py  testWaNoModelsHeadless.py  testWorkflowModel.py  test_ClusterManager.py  test_EvalHandler.py  test_FastAPIServer.py  test_LocalClusterManager.py  test_MessageTypes.py  test_RemoteServerManager.py  test_SecureWaNos.py  test_SimStackServerEntryPoint.py  test_SimStackServerMain.py  test_WaNoCalcJob.py  test_WorkflowModel.py  test_config.py
tests/HTTPServer/: test_HTTPServer.py
tests/Reporting/: test_ReportRenderer.py
tests/Reporting/sample_report/: output_config.ini  output_dict.yml  rendered_wano.yml  report_style.css  report_template.body
tests/Tools/: test_GenJsonEntrypoint.py  test_KillSimStackServer.py
tests/Util/: testFileUtilities.py  test_ClientResourceModelToServerResourceModel.py  test_ClusterSettings.py  test_FileUtilities.py  test_InternalBatchSystem.py  test_ResultRepo.py  test_localhost_checker.py
tests/WaNo/: test_WaNoFactory.py  test_WaNoModels.py  test_WaNoTreeWalker.py
tests/exec_dirs/ClusterSettingsTestDir/: frank.clustersettings  hank.json
tests/exec_dirs/WFEMExecDir/: 2025-03-06-15h05m47s-TestNMSetup.stdout  cpu_usage_test.py  diagnostic_output.txt  jobscript.sh  original_job.txt  rendered_wano.yml
tests/input_dirs/ClusterManager/: testfile
tests/input_dirs/Complete_Workflow/workflow_data/EmployeeRecord/inputs/: EmployeeRecord.xml  report_template.body
tests/input_dirs/Complete_Workflow_Remote/: rendered_workflow.xml
tests/input_dirs/Complete_Workflow_Remote/workflow_data/EmployeeRecord/inputs/: EmployeeRecord.xml
tests/input_dirs/RemoteServerManager/: wf_xml.xml
tests/input_dirs/WorkflowModel/: resources.xml
tests/input_dirs/WorkflowModel/RandomFlow/: rendered_workflow.xml
tests/input_dirs/WorkflowModel/RandomFlow/exec_directories/2025-03-13-15h27m54s-TestNMSetup/: 2025-03-13-15h27m54s-TestNMSetup.stdout  cpu_usage_test.py  diagnostic_output.txt  jobscript.sh
tests/input_dirs/WorkflowModel/RandomFlow/workflow_data/AdvancedForEach/TestNMSetup/inputs/: wano_configuration.json
tests/input_dirs/WorkflowModel/RandomFlow/workflow_data/TestNMSetup/inputs/: TestNMSetup.xml  resources.yml
tests/inputs/wanos/QuantumPatch3/: QuantumPatch3.xml  init_lambda.py  init_quantumpatch.py
tests/inputs/wanos/lightforge2/: lightforge2.xml  settings
tests/inputs/wanos/rendered_lightforge2/: lightforge2.xml  merge_settings.py  reformat_settings.py  report_template.body  resources.yml  sample_config.ini  settings  start_LF.sh  wano_configuration.json
tools/: TestRemoteWFSubmit.py  WaNoCIRunner.py  do_release_nanomatch.sh  generate_json_schema.py
