[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "SimStackServer"
authors = [{name = "Timo Strunk", email = "timo.strunk@gmail.com"}]
readme = "README.rst"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[project.scripts]
"SimStackServer.py" = "SimStackServer.SimStackServerEntryPoint:main"
